--- a/app/views/pages/admin.jade
+++ b/app/views/pages/admin.jade
@@ -3,7 +3,7 @@ extends ../layout
 block content
   .container
     .row
-      form.form-horizontal(method="post", action="/admin/movie/new")
+      form.form-horizontal(method="post", action="/admin/movie/new",enctype="multipart/form-data")
         input(type="hidden", name="movie[_id]", value="#{movie._id}")
         //- 隐藏表单域，用来更新电影数据，存储电影ID
         .form-group
@@ -25,7 +25,11 @@ block content
         .form-group
           label.col-sm-2.control-label(for="inputPoster") 海报地址
           .col-sm-10
-            input#inputPoster.form-control(type="text", name="movie[poster]", value="#{movie.poster}")
+            input#inputPoster.form-control(type="text", name="movie[poster]", value=movie.poster)
+        .form-group
+          label.col-sm-2.control-label(for="uploadPoster") 海报上传
+          .col-sm-10
+            input#uploadPoster(type="file", name="uploadPoster")
         .form-group
           label.col-sm-2.control-label(for="inputFlash") 片源地址
           .col-sm-10
